# Workspace
[workspace]
resolver = "2"
members = ["crates/suon_xtea"]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"

[workspace.dependencies]
bytes = "1.10.1"
thiserror = "2.0.17"

suon_xtea = { path = "crates/suon_xtea" }

# Root Package
[package]
name = "suon"
version.workspace = true
edition.workspace = true

[dependencies]
